add sign out button

--- a/assets/i18n/en.yaml
+++ b/assets/i18n/en.yaml
@@ -33,3 +33,7 @@ profile:
   settings:
     language: "Language"
     privacySafety: "Privacy & Safety"
+    logOut: "Log out"
+    confirmLogout: "Do you want to sign out?"
+    confirmOk: "Ok"
+    confirmCancel: "Cancel"
